[gd_scene load_steps=22 format=2]

[ext_resource path="res://images/32x32 green square.png" type="Texture" id=1]
[ext_resource path="res://images/32x32 blue square.png" type="Texture" id=2]
[ext_resource path="res://MasterParticleController.gd" type="Script" id=3]

[sub_resource type="Curve" id=17]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 17 )

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.588235 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.636364 ), -1.09593, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.2
trail_divisor = 5
trail_size_modifier = SubResource( 6 )
trail_color_modifier = SubResource( 4 )
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0
angle_curve = SubResource( 15 )
scale = 0.12
color_ramp = SubResource( 2 )

[sub_resource type="Curve" id=18]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 18 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.490196 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.650885 ), -0.863343, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
lifetime_randomness = 0.2
trail_divisor = 5
trail_size_modifier = SubResource( 13 )
trail_color_modifier = SubResource( 11 )
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 125.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 35.0
angle_curve = SubResource( 16 )
scale = 0.12
scale_random = 0.01
color_ramp = SubResource( 9 )

[node name="MasterParticleController" type="Node2D"]
script = ExtResource( 3 )

[node name="C1Particles2D" type="Particles2D" parent="."]
amount = 75
lifetime = 3.0
visibility_rect = Rect2( -100000, -100000, 200000, 200000 )
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="C1Particles2D2" type="Particles2D" parent="."]
amount = 75
lifetime = 3.0
visibility_rect = Rect2( -100000, -100000, 200000, 200000 )
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="C1Particles2D3" type="Particles2D" parent="."]
amount = 75
lifetime = 3.0
visibility_rect = Rect2( -100000, -100000, 200000, 200000 )
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="C2Particles2D" type="Particles2D" parent="."]
amount = 100
lifetime = 4.0
visibility_rect = Rect2( -100000, -100000, 200000, 200000 )
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 1 )

[node name="C2Particles2D2" type="Particles2D" parent="."]
amount = 100
lifetime = 4.0
visibility_rect = Rect2( -100000, -100000, 200000, 200000 )
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 1 )

[node name="C2Particles2D3" type="Particles2D" parent="."]
amount = 100
lifetime = 4.0
visibility_rect = Rect2( -100000, -100000, 200000, 200000 )
local_coords = false
process_material = SubResource( 14 )
texture = ExtResource( 1 )
